--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
- <script type="text/javascript"> 
-    (function(d, t) {
- var v = d.createElement(t),
-          s = d.getElementsByTagName(t)[0];
-           v.onload = function () {
-       if (!document.getElementById('root'))
-           {var root = d.createElement('div');}
-                root.id = 'root';d.body.appendChild(root);}  
-       if (window.myChatWidget &&
-       typeof window.myChatWidget.load === 'function') { 
- window
-.myChatWidget.load({ 
-              assistantId:
- '0dbc061c-7e2f-4c0d-9abb-11128fe7e87a'
-,
- apiKey:
- '26064d30-4b39-4994-8fc0-fb743a5011c4'
-,
-           });}}; 
- v.src =
-"https://agentivehub.com/production.bundle.min.js" 
- v.type = 
-"text/javascript"
-;
-        s.parentNode.insertBefore(v, s);})(
-document
-,
- 'script'
-);
- </script>  
+<script type="module">
+  import {
+    GofileUploadExtension,
+    TwoPartFormExtension,
+    NoNameFormExtension,
+    PersonalInfoFormExtension,
+  } from 'https://cdn.jsdelivr.net/gh/Convizr/EcomAgent/KungFunghiExtensionV2.1.js';
+
+  (function(d, t) {
+      var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+      v.onload = function() {
+        window.voiceflow.chat.load({
+          verify: { projectID: '66c4769cfd8fe1222388282f' },
+          url: 'https://general-runtime.voiceflow.com',
+          versionID: 'production',
+          allowDangerousHTML: true,
+          assistant: {
+            extensions: [
+                    GofileUploadExtension,
+                    TwoPartFormExtension,
+                    NoNameFormExtension,
+                    PersonalInfoFormExtension,
+            ],
+          }
+        });
+      }
+      v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+  })(document, 'script');
+</script>
