--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script type="module">
+<script type="text/javascript">
   (function(d, t) {
       var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
       v.onload = function() {
