--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     TwoPartFormExtension,
     NoNameFormExtension,
     PersonalInfoFormExtension,
-  } from 'https://cdn.jsdelivr.net/gh/Convizr/EcomAgent/KungFunghiExtensionV2.1.js';
+  } from 'https://cdn.jsdelivr.net/gh/michaelmengad/myagent@main/TheCoreCollectionExtensions.js';
 
   (function(d, t) {
       var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
