--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <script type="module">
   import {
-    GofileUploadExtension,
     TwoPartFormExtension,
     NoNameFormExtension,
-    PersonalInfoFormExtension,
+    PersonalInfoFormExtension
   } from 'https://cdn.jsdelivr.net/gh/michaelmengad/myagent@main/TheCoreCollectionExtensions.js';
 
   (function(d, t) {
@@ -16,10 +15,9 @@
           allowDangerousHTML: true,
           assistant: {
             extensions: [
-                    GofileUploadExtension,
                     TwoPartFormExtension,
                     NoNameFormExtension,
-                    PersonalInfoFormExtension,
+                    PersonalInfoFormExtension
             ],
           }
         });
