--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     TwoPartFormExtension,
     NoNameFormExtension,
     PersonalInfoFormExtension
-  } from 'https://cdn.jsdelivr.net/gh/michaelmengad/myagent@main/TheCoreCollectionExtensions.js';
+  } from 'https://cdn.jsdelivr.net/gh/michaelmengad/myagent@main/extensions.js';
 
   import voiceflowChat from 'https://cdn.voiceflow.com/widget/bundle.mjs';
 
