--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   import {
     TwoPartFormExtension,
     NoNameFormExtension,
-    PersonalInfoFormExtension
+    PersonalInfoFormExtension,
   } from 'https://cdn.jsdelivr.net/gh/michaelmengad/myagent@main/extensions.js';
 
   (function(d, t) {
@@ -17,7 +17,7 @@
             extensions: [
                     TwoPartFormExtension,
                     NoNameFormExtension,
-                    PersonalInfoFormExtension
+                    PersonalInfoFormExtension,
             ],
           }
         });
